prod/google-cloud/5-whoami-test/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tls
  namespace: whoami
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: test.kirbyware.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-test
                port:
                  number: 80
